syntax = "proto3";
package sensors;
option go_package="github.com/leogoesger/grpc-go/test/protos/sensorpb";

message SensorRequest {
}

message SensorResponse {
    int64 value = 1;
}

service Sensor{
    rpc TempSensor(SensorRequest) returns (stream SensorResponse) {};
    rpc HumiditySensor(SensorRequest) returns (stream SensorResponse) {}; 
}